--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.6",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.536.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
